force-app/main/default/objects/Tournee__c/Tournee__c.object-meta.xml
<CustomObject>
    <label>Tournée</label>
    <nameField>
        <label>Nom de la tournée</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tournées</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>