force-app/main/default/objects/Tournee__c/fields/Numero_bureau__c.field-meta.xml
<CustomField>
    <fullName>Numero_bureau__c</fullName>
    <label>Numéro bureau</label>
    <length>100</length>
    <type>Text</type>
</CustomField>