force-app/main/default/objects/Tournee__c/fields/Numero_tournee__c.field-meta.xml
<CustomField>
    <fullName>Numero_tournee__c</fullName>
    <label>Numéro tournée</label>
    <length>100</length>
    <type>Text</type>
</CustomField>