force-app/main/default/objects/Tournee__c/fields/Vue_Detaillee__c.field-meta.xml
<CustomField>
    <fullName>Vue_Detaillee__c</fullName>
    <description>Rapport externe détaillant les passages de la tournée (VPN nécessaire)</description>
    <formula>HYPERLINK(

&quot;http://cspe-w-vsqlp01/ReportServer/Pages/ReportViewer.aspx?%2fCRM+Transport%2fReports%2fVueBureauTournee&amp;rs:Command=Render&amp;Bureau_Tournee=&quot; &amp; Name,


&quot;Afficher&quot;
,
&quot;_new&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Rapport externe détaillant les passages de la tournée (VPN nécessaire)</inlineHelpText>
    <label>Vue Detaillée</label>
    <type>Text</type>
</CustomField>